# RolePanel-Bot

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  values.yaml
.github/workflows/: ci.yml  release.yml
deploy/kubernetes/: deployment.yaml  postgres.yaml  service.yaml
docs/: README.md
docs/adr/: 0001-discord-library.md  0002-database-library.md  template.md
docs/cli/commands/: config-audit-channel.md
docs/design/: architecture.md  performance.md  security.md
docs/design/data-model/: entities.md
docs/requirements/: constraints.md  functional.md  glossary.md  non-functional.md
helm/role-panel-bot/: Chart.yaml  values.yaml
helm/role-panel-bot/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
migrations/: 20260108000000_initial.sql  20260116000000_panel_name_per_guild.sql
spec/cli/: README.md  errors.md
spec/cli/commands/: config-show.md  panel-create.md  panel-edit.md  panel-list.md
spec/design/: README.md
spec/design/data-model/: overview.md
spec/requirements/: README.md
src/: config.rs  error.rs  main.rs
src/discord/: component.rs  embed.rs  mod.rs  modal.rs
src/gateway/: event_loop.rs
src/handler/command/: about.rs  bot_info.rs  config.rs  help.rs  mod.rs  panel.rs  ping.rs
src/handler/interaction/: mod.rs  (+2 more)
src/health/: server.rs
src/model/: mod.rs
src/repository/: guild_config.rs  mod.rs  panel.rs  panel_role.rs
src/service/: audit.rs  error_notifier.rs  mod.rs  panel.rs  role.rs
(+3 files in other folders)
