[package]
name = "role-panel-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Role Panel Bot"]
description = "Discord Role Panel Bot"
license = "MIT"

[dependencies]
# Discord
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"

# Health server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
